--- a/my-account.html
+++ b/my-account.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <title>karibu </title>
+    <style>
+      body{
+        background-color: black;
+        color: white;
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
