--- a/sales.html
+++ b/sales.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
+    <style>
+      body{
+        background-image: url("image/lake.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        font-family: Arial, sans-serif;
+        color: white;
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
