--- a/user.html
+++ b/user.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>karibu </title>
+    <title>Document </title>
+    <style>
+      body{
+        background-color: black;
+        color: white;
+        background-repeat: no-repeat;
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
